--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <body>
     <nav>
       <ul class="navigation">
-        <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#skills" class="nav-link">Skills</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li class="nav-link" id="GetAbout">About</li>
+        <li class="nav-link" id="GetSkills">Skills</li>
+        <li class="nav-link" id="GetContact">Contact</li>
       </ul>
       <button class="burger-menu" id="burger-menu">
         <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -214,7 +214,7 @@
       </p>
 </footer>
     <!-- Website scripts -->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 
     <!-- Ion icons scripts -->
     <script
